<resources>
    <string name="app_name">WriteReadFile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_Weight">Weight</string>
    <string name="menu_age">Age</string>
    <string name="menu_about">About</string>
    <string name="menu_BackToMain">Back To Main</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_weight">WeightActivity</string>
    <string name="title_activity_age">AgeActivity</string>
</resources>
